<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/baseline_menu_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/baseline_menu_blog"
            android:title="@string/menu_blog" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/baseline_menu_logs"
            android:title="@string/menu_logs" />
    </group>

    <group
        android:id="@+id/group_service"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/baseline_menu_tools"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_main_setting"
            android:title="@string/menu_setting" />
    </group>

    <group
        android:id="@+id/group_support"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/baseline_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_menu_about"
            android:title="@string/menu_about" />
    </group>

</menu>