<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="ru.dumdumbich.logandblog.ui.screen.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_blog"
        android:name="ru.dumdumbich.logandblog.ui.screen.blog.BlogFragment"
        android:label="@string/menu_blog"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/nav_logs"
        android:name="ru.dumdumbich.logandblog.ui.screen.logs.LogsFragment"
        android:label="@string/menu_logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ru.dumdumbich.logandblog.ui.screen.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="ru.dumdumbich.logandblog.ui.screen.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_help"
        android:name="ru.dumdumbich.logandblog.ui.screen.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_about"
        android:name="ru.dumdumbich.logandblog.ui.screen.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>